Fixed overflow in activity modals.

--- a/static/css/jb_style.css
+++ b/static/css/jb_style.css
@@ -448,16 +448,17 @@ table td {
 .jb-activity {
     color: #ACACAC !important;
     font-size: 12px;
-    table-layout: auto;
+    /* table-layout: auto; */
 }
 .jb-activity td {
     padding-left:0px;
     padding-top: 2px;
     padding-bottom: 2px;
-    border-top: 0px;
-    white-space: nowrap;
+    /* white-space: nowrap; */
+    word-wrap: break-word;
+    vertical-align: top;
 }
-.jb-activity tr td:nth-child(1) { width: 1px; }
+/* .jb-activity tr td:nth-child(1) { width: 1px; } */
 
 .activity-all > tbody > tr > td{
     border-top:1px solid #ACACAC;
